# simwheel-hid-rp-pico

./: Cargo.toml  README.md  elf2uf2.nix  flake.nix  openocd.cfg
crates/simwheel-embassy-async/: Cargo.toml  flash.sh
crates/simwheel-embassy-async/src/: main.rs
crates/simwheel-usbd-human/: Cargo.toml  flash.sh
crates/simwheel-usbd-human/.cargo/: config.toml
crates/simwheel-usbd-human/src/: main.rs
debugprobe/: readme.md
src/: main.rs
